# dotfile

./: TODO.md  bashrc  ctags  gitignore  haskell.sh  init.sh  optional.sh  templates  tmux.conf  vimrc  vimrc.neobundle  vimrc.param  vimrc.plug  vimrc.quickrun  vimrc.tab  vimrc.tagbar  xmonad.hs
bash/: alias.bash  env.bash  lib.bash
script/: anyenv.sh  apm.sh  brew.sh  haskell.sh  init.sh
sh/: copen.sh
stack/: config.yml
vim/templates/MARKDOWN/: base-BSD3.md  base-MITL.md  base-simple.md  base-todo.md
vim/templates/_/: file-LICENSE-bsd3.txt
vim/templates/apache/: base-cgi.apache
vim/templates/c/: base-header.c  error.h  snip-intf.c  snip-stack.c  snip-voidf.c
vim/templates/cabal/: base-format.cabal
vim/templates/d/: base-main.d  snip-json_f.d  snip-json_h.d
vim/templates/dockerfile/: base-template
vim/templates/gohtmltmpl/: base-page.tmpl
vim/templates/golang/: snip-func.go  snip-httphandler.go
vim/templates/haskell/: base-coder.hs  base-import.hs  base-main.hs  snip-DriveDataTypable.hs  snip-FlexibleInstances.hs  snip-GADTs.hs  snip-MultiParamTypeClasses.hs  snip-TypeFamilies.hs  snip-TypeSynonymInstances.hs  snip-cpp.hs  snip-func.hs  snip-getIntPair.hs  snip-getIntPart.hs  snip-getInts.hs  snip-language.hs  snip-main.hs  snip-system.hs
vim/templates/javascript/: base-async-main.js  base-lambda-nodejs6.js  base-lambda-nodejs8.js  base-test-with-promise.js  base-webpack-config.js  snip-class.js
vim/templates/json/: base-tsconfig.json
vim/templates/make/: snip-help.mak
vim/vimrc/: hs.vimrc  opam.vimrc  vimrc.param  vimrc.plug
(+29 files in other folders)
